#
# Copyright (c) 2017, 2020 TAWEDGE Technology  
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   TAWEDGE janu team, <janu@tawedge.co>
#
[package]
name = "janu_backend_filesystem"
version = "0.5.0-dev"
authors = ["Brewok <wprayudi@gmail.com>"]
edition = "2018"

[lib]
name = "zbackend_fs"
crate-type = ["cdylib"]

[dependencies]
janu_backend_traits = { git = "https://github.com/virtuehive/janu", branch = "main" }
janu = { git =  "https://github.com/virtuehive/janu", branch = "main" }
janu-util = { git =  "https://github.com/virtuehive/janu", branch = "main" }
async-std = "=1.9.0"
async-trait = "0.1.42"
uhlc = "0.3.1"
lazy_static = "1.4.0"
regex = "1"
env_logger = "0.8.2"
log = "0.4"
git-version = "0.3.4"
home = "0.5.3"
tempfile = "3.2.0"
walkdir = "2.3"
mime_guess = "2.0.3"
rocksdb = "0.16.0"

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.deb]
name = "janu-backend-filesystem"
maintainer = "janu-dev@eclipse.org"
copyright = "2017, 2020 TAWEDGE Technology  "
section = "net"
license-file = ["LICENSE", "0"]
depends = "janu-storages  (=0.5.0-dev)"